Adding HTML files

--- a/SourceCode/Braingle/HTML/TeaserDetailLandscape.html
+++ b/SourceCode/Braingle/HTML/TeaserDetailLandscape.html
@@ -13,7 +13,6 @@
 </head>
 <body>
 
-Please visit Braingle.com for more brain teasers, quizzes and puzzles.
-
+Please select a brain teaser by clicking the list on the left.
 </body>
 </html>
