Adding "All" category. Updating splash screen images and html

--- a/NewSourceCode/Braingle/HTML/TeaserDetailLandscape.html
+++ b/NewSourceCode/Braingle/HTML/TeaserDetailLandscape.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>.::ARTICLE::.</title>
-<style>
-#container{margin:0 auto; height:auto;}
-#content{padding:8px;}
-.title{font-size:14px; font-family:Helvetica; font-weight:bold; color:#222222;}
-.message{font-family:Helvetica; font-weight:lighter; font-size:12px; margin-bottom:20px; color:#222222;line-height:16px;}
-.clr{clear:both;}
-</style>
-</head>
-<body>
-
-Please select a brain teaser by clicking the list on the left.
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Select a teaser</title>
+    </head>
+    <body>
+        <img src="left.png" width="80" height="80" style="vertical-align:middle;" />
+        Please select a brain teaser from the list on the left.
+        
+        <br /><br /><br /><br />
+        <center>
+            <img src="logo.png" width="300" height="127" alt="Braingle" />
+        </center>
+        
+    </body>
 </html>
