--- a/NewSourceCode/Braingle/HTML/InfoDesc.html
+++ b/NewSourceCode/Braingle/HTML/InfoDesc.html
@@ -2,18 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>.::ARTICLE::.</title>
+<title>Braingle Info</title>
 <style>
-#container{margin:0 auto; height:auto;}
-#content{padding:8px;}
-.title{font-size:14px; font-family:Helvetica; font-weight:bold; color:#222222;}
-.message{font-family:Helvetica; font-weight:lighter; font-size:12px; margin-bottom:20px; color:#222222;line-height:16px;}
-.clr{clear:both;}
+
 </style>
 </head>
 <body>
 
+<center>
+<img src="logo.png" width="300" height="127" alt="Braingle" />
+</center>
+<br />
 Please visit Braingle.com for more brain teasers, quizzes and puzzles.
-
+<br /><br />
+Create a free account on our website to rate brain teasers, post comments, and even create your own to share with the world.
 </body>
 </html>
