--- a/NewSourceCode/Braingle/HTML/TeaserDetailPortrait.html
+++ b/NewSourceCode/Braingle/HTML/TeaserDetailPortrait.html
@@ -2,17 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>.::ARTICLE::.</title>
-<style>
-#container{margin:0 auto; height:auto;}
-#content{padding:8px;}
-.title{font-size:14px; font-family:Helvetica; font-weight:bold; color:#222222;}
-.message{font-family:Helvetica; font-weight:lighter; font-size:12px; margin-bottom:20px; color:#222222;line-height:16px;}
-.clr{clear:both;}
-</style>
+<title>Select a teaser</title>
 </head>
 <body>
-
+<img src="up.png" width="80" height="80" />
+<br />
 Please select a brain teaser by clicking the "Menu" button above.
+
+<br /><br /><br /><br />
+<center>
+<img src="logo.png" width="300" height="127" alt="Braingle" />
+</center>
+
 </body>
 </html>
